--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -46,7 +46,7 @@ ACM SIG Proceedings.
 
 \section{Introduction}
 
-The past decade has seen the rise of Deep Neural Networks. Neural Networks have the ability to model complex non-linear functions by efficiently representing the input parameters as a system of linear equations with non-linear activation. They have achieved unparalleled success in the fields of Computer Vision, Natural Language Processing and Artificial Intelligence. A standard Deep Convolutional Neural Networks has an upwards of Million parameters to train\cite{NIPS2012_4824}. The data required to train these networks typically ranges in Hundred's of Gigabytes. Deep Neural Networks are inherently parallel in nature, with weights and gradient updates shared across layers within the network. It is thus possible train layers of the network in parallel across multiple machines to achieve efficient computational time and higher accuracy. The use of Graphical Processing Units has considerably reduced the time it takes to train these networks [6]. Graphical Processing Units perform resource unconstrained tasks in parallel to achieve high throughput. Graphical Processing Units are expensive to procure and are bounded by memory constraints. Existing Industrial architectures use a distributed computing paradigm capable of handling parallel computing tasks. Through this paper, I wish to highlight approaches which use cheaper commodity systems integrated in a distributed fashion to handle training such Deep Neural Networks.
+The past decade has seen the rise of Deep Neural Networks. Neural Networks have the ability to model complex non-linear functions by efficiently representing the input parameters as a system of linear equations with non-linear activation. They have achieved unparalleled success in the fields of Computer Vision, Natural Language Processing and Artificial Intelligence. A standard Deep Convolutional Neural Networks has an upwards of Million parameters to train\cite{NIPS2012_4824}. The data required to train these networks typically ranges in Hundred's of Gigabytes. Deep Neural Networks are inherently parallel in nature, with weights and gradient updates shared across layers within the network. It is thus possible train layers of the network in parallel across multiple machines to achieve efficient computational time and higher accuracy. The use of Graphical Processing Units has considerably reduced the time it takes to train these networks [6]. Graphical Processing Units perform resource unconstrained tasks in parallel to achieve high throughput. Graphical Processing Units are expensive to procure and are bounded by memory constraints. Existing Industrial architectures use a distributed computing paradigm capable of handling parallel computing tasks. I highlight approaches which use cheaper commodity systems integrated in a distributed fashion to handle training such Deep Neural Networks.
 
 \section{Parallel and Distributed architectures}
 
