--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -34,9 +34,7 @@
 
 
 \begin{abstract}
-This paper provides a sample of a \LaTeX\ document which conforms,
-somewhat loosely, to the formatting guidelines for
-ACM SIG Proceedings.
+The past decade has seen the rise of Deep Neural Networks. A standard Deep Convolutional Neural Networks has an upwards of Million parameters to train\cite{NIPS2012_4824}. The data required to train these networks typically ranges in Hundred's of Gigabytes, making it inefficient to train these networks on standalone machines. Graphical Processing Units decrease the computation time significantly but suffer from memory constraints. Existing Industrial architectures use a distributed computing paradigm capable of handling parallel computing tasks. I highlight approaches which use cheaper commodity systems integrated in a distributed fashion to handle training such Deep Neural Networks.
 \end{abstract}
 
 \keywords{I523, Distributed Systems, Convolutional Neural Networks}
@@ -46,9 +44,9 @@ ACM SIG Proceedings.
 
 \section{Introduction}
 
-The past decade has seen the rise of Deep Neural Networks. Neural Networks have the ability to model complex non-linear functions by efficiently representing the input parameters as a system of linear equations with non-linear activation. They have achieved unparalleled success in the fields of Computer Vision, Natural Language Processing and Artificial Intelligence. A standard Deep Convolutional Neural Networks has an upwards of Million parameters to train\cite{NIPS2012_4824}. The data required to train these networks typically ranges in Hundred's of Gigabytes. Deep Neural Networks are inherently parallel in nature, with weights and gradient updates shared across layers within the network. It is thus possible train layers of the network in parallel across multiple machines to achieve efficient computational time and higher accuracy. The use of Graphical Processing Units has considerably reduced the time it takes to train these networks [6]. Graphical Processing Units perform resource unconstrained tasks in parallel to achieve high throughput. Graphical Processing Units are expensive to procure and are bounded by memory constraints. Existing Industrial architectures use a distributed computing paradigm capable of handling parallel computing tasks. I highlight approaches which use cheaper commodity systems integrated in a distributed fashion to handle training such Deep Neural Networks.
+The past decade has seen the rise of Deep Neural Networks. Neural Networks have the ability to model complex non-linear functions by efficiently representing the input parameters as a system of linear equations with non-linear activation. They have achieved unparalleled success in the fields of Computer Vision, Natural Language Processing and Artificial Intelligence[3,4]. The current state of the arts Convolutional Neural Networks have billions of parameters to train [5]. Large amounts of data is required to train these parameters. Deep Neural Networks are inherently parallel in nature, with weights and gradient updates shared across layers within the network. Section \ref{parallel} discusses various ways to introduce parallelism while training Deep Neural Networks. Section \ref{data} discusses methodologies to update Model parameters when the data to train is distributed across multiple machines within the network.  Section \ref{layer} introduces methodologies to train multiple layers of the same network in parallel in a distributed fashion. Section \ref{unift} discusses methodologies and benefits to train multiple parallel networks simultaneously when the required resources are available.  
 
-\section{Parallel and Distributed architectures}
+\section{Parallel and Distributed architectures} \label{parallel}
 
 \subsection{Convolutional Neural Networks}
 
@@ -70,7 +68,7 @@ Standard Neural Networks have millions of parameters to train and optimize. Addi
 \item Model Parallelism - When the model being trained is too large to fit into the main memory. It is required to distribute different layers of the model across different machine and use distributed variants of Stochastic Gradient Descent to update each layer being processed at different machines.  
 \end{itemize}
 
-\section{Data Parallelism}
+\section{Data Parallelism} \label{data}
 
 Data parallelism involves storing the input data required to train our Convolutional Neural Network Model across multiple machines. Each machine runs the same network model. Each model is then trained on an ordered subset of the data. One of the biggest challenges faced in data parallelism is updation of model parameters. These are broadly classified into 2 categories.
 
@@ -124,17 +122,18 @@ Dean et. Al, 2012 \cite{Dean:2012:LSD:2999134.2999271} introduced an asynchronou
 
 
 
-\section{Parallelism of Network layers}
+\section{Parallelism of Network layers} \label{layer}
 
 Recent research in Deep Convolutional Networks is focused on the 'wider' paradigm instead of the traditional 'deeper' paradigm [6,7]. Wider Convolutional Networks can be viewed as a stack of smaller networks connected in parallel. Each of these smaller networks is designed and optimized to extract complex relationships in the input data at different depth levels. Wider Networks are computationally efficient than deeper networks. These smaller networks can be trained in parallel across multiple cores as these networks do not suffer from resource sharing. Each network in a layer gets its own copy of the output from the previous layer. A master layer is required to collate the results of the smaller networks to be passed to the next layer of the Network. 
 
-\section{Parallelism of Networks}
+\section{Parallelism of Networks} \label{unift}
 
 
 Different layers within the Neural Network share their weights and biases. Thus entire copies of The Neural Networks can be trained in parallel with different data inputs fed to the different networks. This significantly reduces the time it takes to train Deep Networks. Access to High Performance Computing resources is required to setup such an environment, this is one of the biggest drawbacks of training several full length networks in parallel.
 
 
 \bibliographystyle{ACM-Reference-Format}
+\bibliographystyle{unsrt}
 \bibliography{report} 
 
 \end{document}
