--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -7,8 +7,6 @@
 \usepackage[section]{placeins}
 \usepackage[noend]{algpseudocode}
 
-\hypersetup{colorlinks,linkcolor={blue},citecolor={blue},urlcolor={red}}  
-
 \renewcommand{\efloatseparator}{\mbox{}} % no new page between figures
 
 \usepackage{booktabs} % For formal tables
@@ -37,7 +35,7 @@
 
 
 \begin{abstract}
-The past decade has seen the rise of Deep Neural Networks. A standard Deep Convolutional Neural Network has an upwards of Million parameters to train\cite{NIPS2012_4824}. The data required to train these networks typically ranges in Hundred's of Gigabytes, making it inefficient to train these networks on standalone machines. Graphical Processing Units decrease the computation time significantly but suffer from memory constraints. Existing Industrial architectures use a distributed computing paradigm capable of handling parallel computing tasks. I highlight approaches which use cheaper commodity systems integrated in a distributed fashion to handle training such Deep Neural Networks.
+The past decade has seen the rise of Deep Neural Networks. A standard Deep Convolutional Neural Network has an upwards of Million parameters to train. The data required to train these networks typically ranges in Hundred's of Gigabytes, making it inefficient to train these networks on standalone machines. Graphical Processing Units decrease the computation time significantly but suffer from memory constraints. Existing Industrial architectures use a distributed computing paradigm capable of handling parallel computing tasks. I highlight approaches which use cheaper commodity systems integrated in a distributed fashion to handle training such Deep Neural Networks.
 \end{abstract}
 
 \keywords{I523, Distributed Systems, Convolutional Neural Networks, Parallel Systems, Deep Neural Networks}
