fix - in bibtex labels instead of _

--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -1,6 +1,6 @@
 % Encoding: UTF-8
 
-@incollection{NIPS2012_4824,
+@incollection{NIPS2012-4824,
 title = {ImageNet Classification with Deep Convolutional Neural Networks},
 author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
 booktitle = {Advances in Neural Information Processing Systems 25},
@@ -30,7 +30,7 @@ year = {2012}
   url       = {http://arxiv.org/abs/1512.03385}
   }
   
-@incollection{NIPS2010_4006,
+@incollection{NIPS2010-4006,
 title = {Parallelized Stochastic Gradient Descent},
 author = {Martin Zinkevich and Markus Weimer and Li, Lihong and Alex J. Smola},
 booktitle = {Advances in Neural Information Processing Systems 23},
