--- a/paper1/review.tex
+++ b/paper1/review.tex
@@ -136,5 +136,5 @@ The number of parameters to train a neural network optimally have been increasin
 \bibliographystyle{unsrtnat}
 \bibliography{report} 
 
-\end{document}
+\input{bibtex-error}\input{issues}\end{document}
 
