--- a/paper1/issues.tex
+++ b/paper1/issues.tex
@@ -14,7 +14,7 @@
 \subsection{Writing Errors}
 
     \TODO{Do not use the word {\em I} instead use {\em we} even if you are the sole author}
-    \TODO{Errors in title, e.g. capitalization. For => for}
+    \TODO{Error in title capitalization}
     \TODO{Are you using {\em a} and {\em the} properly?}
 
 \subsection{Citation Issues and Plagiarism}
