--- a/paper1/issues.tex
+++ b/paper1/issues.tex
@@ -6,21 +6,30 @@
 
     \TODO{Bibtex labels cannot have any spaces, \_ or \& in it}
     \TODO{Citations in text showing as [?]: this means either your report.bib is not up-to-date or there is a spelling error in the label of the item you want to cite, either in report.bib or in report.tex}
+    \DONE{Citations are showing up in the report}
 
 \subsection{Formatting}
 
     \TODO{HID not included in the keywords}
+    \DONE{HID Included}
+
 
 \subsection{Writing Errors}
 
     \TODO{Do not use the word {\em I} instead use {\em we} even if you are the sole author}
+    \DONE{I changed to we}
+    
     \TODO{Error in title capitalization}
+    \DONE{Capitalization}
+    
     \TODO{Are you using {\em a} and {\em the} properly?}
+    \DONE{Updated}
 
 \subsection{Citation Issues and Plagiarism}
 
     \TODO{It is your responsibility to make sure no plagiarism occurs. The instructions and resources were given in the class}
     \TODO{Lack of citations in Introduction section and also in section 4}
+    \DONE{Done, Citations in introduction and section 4}
 
 \subsection{Structural Issues}
 
@@ -29,5 +38,6 @@
 \subsection{Details about the Figures and Tables}
 
     \TODO{Figures, tables and algorithms should be referred to in the text}
+    \DONE{Algorithm refered}
 
 re
