--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -4,7 +4,11 @@
 title = {ImageNet Classification with Deep Convolutional Neural Networks},
 author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
 booktitle = {Advances in Neural Information Processing Systems 25},
-year = {2012}
+editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+pages = {1097--1105},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
 }
 
 @article{DBLP:journals/corr/SimonyanZ14a,
@@ -14,10 +18,14 @@ year = {2012}
   journal   = {CoRR},
   volume    = {abs/1409.1556},
   year      = {2014},
-  url       = {http://arxiv.org/abs/1409.1556}
-  
-  }
-  
+  url       = {http://arxiv.org/abs/1409.1556},
+  archivePrefix = {arXiv},
+  eprint    = {1409.1556},
+  timestamp = {Wed, 07 Jun 2017 14:41:51 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/corr/SimonyanZ14a},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @article{DBLP:journals/corr/HeZRS15,
   author    = {Kaiming He and
                Xiangyu Zhang and
@@ -27,24 +35,41 @@ year = {2012}
   journal   = {CoRR},
   volume    = {abs/1512.03385},
   year      = {2015},
-  url       = {http://arxiv.org/abs/1512.03385}
-  }
-  
+  url       = {http://arxiv.org/abs/1512.03385},
+  archivePrefix = {arXiv},
+  eprint    = {1512.03385},
+  timestamp = {Wed, 07 Jun 2017 14:41:17 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/corr/HeZRS15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @incollection{NIPS2010-4006,
 title = {Parallelized Stochastic Gradient Descent},
 author = {Martin Zinkevich and Markus Weimer and Li, Lihong and Alex J. Smola},
 booktitle = {Advances in Neural Information Processing Systems 23},
+editor = {J. D. Lafferty and C. K. I. Williams and J. Shawe-Taylor and R. S. Zemel and A. Culotta},
 pages = {2595--2603},
 year = {2010},
+publisher = {Curran Associates, Inc.},
 url = {http://papers.nips.cc/paper/4006-parallelized-stochastic-gradient-descent.pdf}
 }
 
+
 @inproceedings{Dean,
- author = {Dean, Jeffrey and Corrado, Greg S. and Monga, Rajat and Chen, Kai and Devin, Matthieu et al},
+ author = {Dean, Jeffrey and Corrado, Greg S. and Monga, Rajat and Chen, Kai and Devin, Matthieu and Le, Quoc V. and Mao, Mark Z. and Ranzato, Marc'Aurelio and Senior, Andrew and Tucker, Paul and Yang, Ke and Ng, Andrew Y.},
  title = {Large Scale Distributed Deep Networks},
+ booktitle = {Proceedings of the 25th International Conference on Neural Information Processing Systems - Volume 1},
  series = {NIPS'12},
- year = {2012}
-}
+ year = {2012},
+ location = {Lake Tahoe, Nevada},
+ pages = {1223--1231},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=2999134.2999271},
+ acmid = {2999271},
+ publisher = {Curran Associates Inc.},
+ address = {USA},
+} 
+
 
 @article{Googlenet,
   author    = {Christian Szegedy and
@@ -60,8 +85,11 @@ url = {http://papers.nips.cc/paper/4006-parallelized-stochastic-gradient-descent
   journal   = {CoRR},
   volume    = {abs/1409.4842},
   year      = {2014},
-  url       = {http://arxiv.org/abs/1409.4842}
-  
-  }
-
+  url       = {http://arxiv.org/abs/1409.4842},
+  archivePrefix = {arXiv},
+  eprint    = {1409.4842},
+  timestamp = {Wed, 07 Jun 2017 14:40:42 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/corr/SzegedyLJSRAEVR14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
